<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/iv_cocktail_detail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_large_size"
                    android:paddingTop="@dimen/small_interval"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/cocktail_image"/>

            <ImageView
                    android:id="@+id/iv_cocktail_favorite"
                    android:layout_width="@dimen/image_favorite_size"
                    android:layout_height="@dimen/image_favorite_size"
                    android:layout_margin="@dimen/middle_interval"
                    android:src="@drawable/ic_star_border_orange_24dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/favorite_cocktail"/>
        </FrameLayout>

        <ProgressBar
                android:id="@+id/progress_detail_cocktail"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_gravity="center"/>

        <TextView
                android:id="@+id/tv_cocktail_name"
                tools:text="Margarita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="@dimen/middle_interval"
                android:paddingEnd="@dimen/middle_interval"
                android:paddingTop="@dimen/small_interval"
                android:paddingBottom="@dimen/small_interval"
                android:textStyle="bold|italic"
                android:textSize="@dimen/large_text_size"/>

        <View
                style="@style/Divider"
                android:layout_marginStart="@dimen/middle_interval"
                android:layout_marginEnd="@dimen/middle_interval"/>

        <TextView
                android:id="@+id/tv_cocktail_type"
                tools:text="type: Alcoholic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/small_interval"
                android:paddingStart="@dimen/large_interval"
                android:paddingEnd="@dimen/middle_interval"/>

        <TextView
                android:id="@+id/tv_cocktail_category"
                tools:text="category: Cocktail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/large_interval"
                android:paddingEnd="@dimen/middle_interval"/>

        <TextView
                android:id="@+id/tv_cocktail_glass"
                tools:text="glass: Cocktail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/large_interval"
                android:paddingEnd="@dimen/middle_interval"
                android:paddingBottom="@dimen/small_interval"/>

        <View
                style="@style/Divider"
                android:layout_marginStart="@dimen/middle_interval"
                android:layout_marginEnd="@dimen/middle_interval"/>

        <TextView
                android:text="@string/recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/middle_interval"
                android:paddingEnd="@dimen/middle_interval"
                android:paddingTop="@dimen/middle_interval"
                android:paddingBottom="@dimen/small_interval"
                android:textSize="@dimen/middle_text_size"/>

        <TextView
                android:id="@+id/tv_cocktail_recipe"
                tools:text="Rub the rim of the glass with the lime slice to make the salt stick to it. Take care to moisten only the outer rim and sprinkle the salt on it. The salt should present to the lips of the imbiber and never mix into the cocktail. Shake the other ingredients with ice, then carefully pour into the glass."
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/large_interval"
                android:paddingEnd="@dimen/middle_interval"/>

        <TextView
                android:text="@string/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/middle_interval"
                android:paddingEnd="@dimen/middle_interval"
                android:paddingTop="@dimen/middle_interval"
                android:paddingBottom="@dimen/small_interval"
                android:textSize="@dimen/middle_text_size"/>

        <View
                style="@style/Divider"
                android:layout_marginStart="@dimen/middle_interval"
                android:layout_marginEnd="@dimen/middle_interval"/>
    </LinearLayout>
</ScrollView>